; ModuleID = '/home/carl/AnghaBench/mozjpeg/extr_turbojpeg.c_TJBUFSIZE.c'
source_filename = "/home/carl/AnghaBench/mozjpeg/extr_turbojpeg.c_TJBUFSIZE.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [30 x i8] c"TJBUFSIZE(): Invalid argument\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @TJBUFSIZE(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i64 0, i64* %5, align 8
  %6 = load i32, i32* %3, align 4
  %7 = icmp slt i32 %6, 1
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = icmp slt i32 %9, 1
  br i1 %10, label %11, label %13

11:                                               ; preds = %8, %2
  %12 = call i32 @_throwg(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %11, %8
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @PAD(i32 %14, i32 16)
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @PAD(i32 %16, i32 16)
  %18 = mul nsw i32 %15, %17
  %19 = mul nsw i32 %18, 6
  %20 = add nsw i32 %19, 2048
  %21 = sext i32 %20 to i64
  store i64 %21, i64* %5, align 8
  br label %22

22:                                               ; preds = %13
  %23 = load i64, i64* %5, align 8
  ret i64 %23
}

declare dso_local i32 @_throwg(i8*) #1

declare dso_local i32 @PAD(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
